# Yahboom-ROSMaster-Bot

./: README.md  frames_2026-03-22_23.24.48.gv  frames_2026-03-25_09.59.08.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mecanum_drive_controller/share/mecanum_drive_controller/: local_setup.sh  package.sh
install/ros2_ws/share/ros2_ws/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_bringup/share/ros_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros_gazebo/share/ros_gazebo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_localization/share/ros_localization/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros_navigation/share/ros_navigation/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_test
src/ros2_ws/: CMakeLists.txt
src/ros_bringup/: CMakeLists.txt  package.xml
src/ros_bringup/launch/: load_ros2_controllers.launch.py
src/ros_gazebo/: CMakeLists.txt
src/ros_localization/: CMakeLists.txt  package.xml
src/ros_navigation/: CMakeLists.txt  package.xml
src/rosmaster_description/: CMakeLists.txt
src/rosmaster_description/launch/: robot_state_publisher.launch.py
src/system_tests/: CMakeLists.txt
src/system_tests/src/: mecanum_parameters_node.cpp  square_mecanum_controller.cpp
(+28 files in other folders)
