<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_ws</name>
  <version>0.0.0</version>
  <description>METAPACKAGE</description>
  <maintainer email="kunal-jazzy@todo.todo">kunal-jazzy</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_bringup</exec_depend>
  <exec_depend>rosmaster_description</exec_depend>
  <exec_depend>ros_gazebo</exec_depend>
  <exec_depend>system_tests</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
